--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -11,15 +11,17 @@
     </div>
 
     <div class="alert alert-warning" role="alert" ng-show="containerSizeListing">
-        <h3 class="panel-title"><span class="glyphicon glyphicon-refresh spin"></span> {{containerSizeListingMessage}}</h3>
+        <h3 class="panel-title"><span class="glyphicon glyphicon-refresh spin"></span> {{containerSizeListingMessage}}
+        </h3>
     </div>
 
     <table class="table table-condensed table-hover table-striped table-bordered">
         <thead>
         <tr class="success">
-            <td colspan="8">
+            <td colspan="9">
                 <div class="col-md-4">
-                    <button type="button" ng-click="refreshContainers()" class="btn btn-primary"><span class="glyphicon glyphicon-refresh"></span>Refresh
+                    <button type="button" ng-click="refreshContainers()" class="btn btn-primary"><span
+                            class="glyphicon glyphicon-refresh"></span>Refresh
                     </button>
                     <button type="button" class="btn btn-primary" ng-click="switchShowAllContainersFlag()">
                         <span ng-class="{'glyphicon glyphicon-unchecked':!showAllContainersFlag, 'glyphicon glyphicon-check':showAllContainersFlag}"></span>All
@@ -28,13 +30,14 @@
                             ng-class="{'glyphicon glyphicon-unchecked':!showContainerSizeFlag, 'glyphicon glyphicon-check':showContainerSizeFlag}"></span>Show
                         size
                     </button>
-                    <button type="button" class="btn btn-success" ng-click='createContainer()' title="Create new container"><span
+                    <button type="button" class="btn btn-success" ng-click='createContainer()'
+                            title="Create new container"><span
                             class="glyphicon glyphicon-plus"></span>Create
                     </button>
 
                 </div>
                 <div class="col-md-6 vcenter">
-                    <strong> Items listed: <span class="badge">{{containerDataSize}}</span></strong>
+                    <strong> Items listed: <span class="badge">{{containerDataListSize}}</span></strong>
                 </div>
             </td>
         </tr>
@@ -45,10 +48,12 @@
                        ng-click="switchSelectAllFlag()">
                 </span>
             </td>
+
+            <td width="15%" class="text-center">
+                <div class="vcenter"><strong>Control</strong></div>
+            </td>
             <td width="5%" class="text-center">
-                <div class="vcenter">
-                    <strong>ID</strong>
-                </div>
+                <div class="vcenter"><strong>ID</strong></div>
             </td>
             <td width="5%" class="text-center vcenter">
                 <div class="vcenter"><strong>Name</strong></div>
@@ -78,26 +83,36 @@
                 </span>
             </td>
             <td>
-                <button class="btn btn-info btn-block text-center" ng-click="goContainerDetails(value.Id)">
-                    {{value.Id | limitTo:12}}
+                <button class="btn btn-warning">
+                    <span class="glyphicon glyphicon glyphicon-pause"></span>
+                </button>
+                <button class="btn btn-danger">
+                    <span class="glyphicon glyphicon glyphicon-stop"></span>
+                </button>
+            </td>
+            <td>
+                <button class="btn btn-info btn-block text-center" ng-click="goContainerDetails(value.container.Id)">
+                    {{value.container.Id | limitTo:12}}
                 </button>
             </td>
             <td class="text-center">
-                <button class="btn btn-info btn-block text-right" ng-click="goContainerDetails(value.Id)">
-                    {{value.Name | shorten:true:30}}
+                <button class="btn btn-info btn-block text-right" ng-click="goContainerDetails(value.container.Id)">
+                    {{value.containerDetails.Name.charAt(0) === '/' ? value.containerDetails.Name.substr(1) :
+                    value.containerDetails.Name | shorten:true:30}}
                 </button>
             </td>
             <td class="text-center">
-                <button class="btn btn-info btn-block" ng-click="goImageDetails(value.ImageId)">
-                    {{value.Image | shorten:true:30}}
+                <button class="btn btn-info btn-block" ng-click="goImageDetails(value.containerDetails.Image)">
+                    {{value.container.Image | shorten:true:30}}
                 </button>
             </td>
-            <td class="text-left">{{value.Command | shorten:true:80}}</td>
-            <td class="text-left">{{value.Status}}</td>
-            <td class="text-left">{{showContainerSizeFlag==true?value.SizeRw:NAN | bytes:2 }} ({{showContainerSizeFlag==true?value.SizeRootFs:NAN | bytes:2
+            <td class="text-left">{{value.container.Command | shorten:true:80}}</td>
+            <td class="text-left">{{value.container.Status}}</td>
+            <td class="text-left">{{showContainerSizeFlag==true?value.container.SizeRw:NAN | bytes:2 }}
+                ({{showContainerSizeFlag==true?value.container.SizeRootFs:NAN | bytes:2
                 }})
             </td>
-            <td class="text-left">{{value.Created * 1000 | date:'dd, MMM yyyy HH:mm:ss'}}</td>
+            <td class="text-left">{{value.container.Created * 1000 | date:'dd, MMM yyyy HH:mm:ss'}}</td>
         </tr>
         </tbody>
     </table>
