--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -49,8 +49,11 @@
                 </span>
             </td>
 
-            <td width="15%" class="text-center">
+            <td width="10%" class="text-center">
                 <div class="vcenter"><strong>Control</strong></div>
+            </td>
+            <td width="5%" class="text-center vcenter">
+                <div class="vcenter"><strong>Status</strong></div>
             </td>
             <td width="5%" class="text-center">
                 <div class="vcenter"><strong>ID</strong></div>
@@ -64,9 +67,7 @@
             <td width="40%" class="text-center vcenter">
                 <div class="vcenter"><strong>Command</strong></div>
             </td>
-            <td width="8%" class="text-center vcenter">
-                <div class="vcenter"><strong>Status</strong></div>
-            </td>
+
             <td width="5%" class="text-center vcenter">
                 <div class="vcenter"><strong>Diff size (Virtual size)</strong></div>
             </td>
@@ -83,31 +84,35 @@
                 </span>
             </td>
             <td>
-                <button class="btn btn-warning">
+                <button class="btn btn-warning btn-sm">
                     <span class="glyphicon glyphicon glyphicon-pause"></span>
                 </button>
-                <button class="btn btn-danger">
+                <button class="btn btn-danger btn-sm">
                     <span class="glyphicon glyphicon glyphicon-stop"></span>
                 </button>
             </td>
             <td>
-                <button class="btn btn-info btn-block text-center" ng-click="goContainerDetails(value.container.Id)">
+                <p class="label" style="font-size:0.9em;"
+                      ng-class="{'label-success': value.containerStatus=='running', 'label-warning': value.containerStatus=='paused', 'label-danger': value.containerStatus=='stopped','label-info': value.containerStatus=='created'}">{{value.containerStatus}}</p>
+            </td>
+
+            <td>
+                <button class="btn btn-block btn-primary btn-xs text-center" ng-click="goContainerDetails(value.container.Id)">
                     {{value.container.Id | limitTo:12}}
                 </button>
             </td>
             <td class="text-center">
-                <button class="btn btn-info btn-block text-right" ng-click="goContainerDetails(value.container.Id)">
+                <button class="btn btn-info btn-block btn-xs text-right" ng-click="goContainerDetails(value.container.Id)">
                     {{value.containerDetails.Name.charAt(0) === '/' ? value.containerDetails.Name.substr(1) :
                     value.containerDetails.Name | shorten:true:30}}
                 </button>
             </td>
             <td class="text-center">
-                <button class="btn btn-info btn-block" ng-click="goImageDetails(value.containerDetails.Image)">
+                <button class="btn btn-info btn-block btn-xs" ng-click="goImageDetails(value.containerDetails.Image)">
                     {{value.container.Image | shorten:true:30}}
                 </button>
             </td>
             <td class="text-left">{{value.container.Command | shorten:true:80}}</td>
-            <td class="text-left">{{value.container.Status}}</td>
             <td class="text-left">{{showContainerSizeFlag==true?value.container.SizeRw:NAN | bytes:2 }}
                 ({{showContainerSizeFlag==true?value.container.SizeRootFs:NAN | bytes:2
                 }})
