Button position fixing

--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -3,7 +3,7 @@
         <div class="col-md-6">
             <h3>Containers on: <strong>{{$root.hostUrl}}</strong></h3>
         </div>
-        <div class="col-md-6 vcenter">
+        <div class="col-md-6">
             <div class="pull-right " style=" vertical-align: middle;margin-top: 21px">
                 <button class="btn btn-success btn-sm"
                         ng-click="startSelectedContainers()">
