--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -1,6 +1,6 @@
-<div class="col-md-12 pull-right">
+<div class="col-md-12 ">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
             <h3>Container: <strong>{{containerDetails.Name.substring(1).toUpperCase()}}</strong>
                 <span ng-show='containerDetails.State.Running==true && containerDetails.State.Paused==false' class="label label-success">Running</span>
                 <span ng-show='containerDetails.State.Paused==true' class="label label-warning">Paused</span>
@@ -15,8 +15,41 @@
                     class="label label-danger">Probably terminated with Ctrl-C</span>
                 <span ng-show='containerDetails.State.OOMKilled==true' class="label label-danger">Out of memory</span></h3>
         </div>
+        <div class="col-md-6">
+            <div class="pull-right " style=" vertical-align: middle;margin-top: 21px">
+                <button class="btn btn-success btn-sm"
+                        ng-click="startContainer()">
+                    <span class="glyphicon glyphicon glyphicon-play"></span><strong> start</strong>
+                </button>
+                <button class="btn btn-danger btn-sm"
+                        ng-click="stopContainer()">
+                    <span class="glyphicon glyphicon glyphicon-stop"></span><strong> stop</strong>
+                </button>
+                <button class="btn btn-primary btn-sm"
+                        ng-click="restartContainer()">
+                    <span class="glyphicon glyphicon glyphicon-refresh"></span><strong> restart</strong>
+                </button>
+                <button class="btn btn-danger btn-sm"
+                        ng-click="killContainer()">
+                    <span class="glyphicon glyphicon glyphicon-trash"></span><strong> kill</strong>
+                </button>
+                <button class="btn btn-warning btn-sm"
+                        ng-click="pauseContainer()">
+                    <span class="glyphicon glyphicon glyphicon-pause"></span><strong> pause</strong>
+                </button>
+                <button class="btn btn-info btn-sm"
+                        ng-click="unpauseContainer()">
+                    <span class="glyphicon glyphicon glyphicon-repeat"></span><strong> unpause</strong>
+                </button>
+                <button class="btn btn-danger btn-sm"
+                        ng-click="removeContainer()">
+                    <span class="glyphicon glyphicon glyphicon-trash"></span><strong> remove</strong>
+                </button>
+            </div>
+        </div>
     </div>
     <hr/>
+
     <div class="alert alert-info" role="alert" ng-show="containerDetailsLoading">
         <h3 class="panel-title"><span class="glyphicon glyphicon-refresh spin"></span> {{containerDetailsLoadingMessage}}</h3>
     </div>
